Package: aroma.core
===================

Version: 2.6.11 [2012-11-07]
o CRAN POLICY: Made a few of the examples faster.  Also made
  some of the system tests faster.


Version: 2.6.10 [2012-11-05]
o CLEANUP: Replaced all whichVector() with which(), because the
  latter is now the fastest again.


Version: 2.6.9 [2012-10-31]
o Added argument 'units' to readDataFrame() for 
  AromaUnitChromosomeTabularBinaryFile.


Version: 2.6.8 [2012-10-29]
o CLEANUP: Now using Arguments$get(Read|Writ)ablePath() instead of
  filePath(..., expandLinks="any"). 


Version: 2.6.7 [2012-10-21]
o Added argument 'maxNAFraction' to CopyNumberChromosomalModel, which
  is now the prefer place to specify it, instead of to fit() etc.
o Now CopyNumberChromosomalModel() accepts references of type
  "none", "constant(1)", "constant(2)", and "median", where "none"
  and "constant(1)" are identical, "constant(2)" uses reference signals
  that are exactly 2, and "median" uses reference signals are equals
  the robust average across all samples.  For backward compatibility,
  NULL is still supported, which equals "median".
o ROBUSTNESS: Now using Arguments$getWritablePath() everywhere instead
  of mkdirs(), because the former will do a better job in creating
  and asserting directories on slow shared file systems, and when it
  fails it gives a more informative error message.
o BUG FIX: Scrolling in the ChromosomeExplorer by dragging the 
  navigator bar was broken.


Version: 2.6.6 [2012-10-18]
o It is no longer possible to have different *versions* of ArrayExplorer
  and ChromosomeExplorer under the same reports/ directory structure.
  If you wish to keep old Explorer reports, rename those reports/ 
  root directories.
o ROBUSTNESS/BUG FIX: Some of the HTML and CSS errors in ArrayExplorer
  and ChromosomeExplorer that was detected by the W3's online validation 
  services were correct.
o BUG FIX: A few errors in the Javascript of ArrayExplorer has been