@@ -36,9 +36,9 @@ setMethodS3("getExtensionPattern", "AromaCellSequenceFile", function(static, ...
 }, static=TRUE, protected=TRUE)
 
 
-setMethodS3("getColumnNames", "AromaCellSequenceFile", function(this, ...) {
+setMethodS3("getDefaultColumnNames", "AromaCellSequenceFile", function(this, ...) {
   c(sprintf("b%02d", seq(from=1, to=nbrOfColumns(this)-1)), "targetStrand");
-})
+}, protected=TRUE)
 
 
 setMethodS3("getProbeLength", "AromaCellSequenceFile", function(this, ...) {
